Update README.md
updated with functionalities listed